css: fix grayed body color in dark mode

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,7 +133,7 @@ body.darkBG {
   background: #3B3F45;
   color: #fdfdfd;
 }
-body .grayed {
+body.darkBG .grayed {
   color: rgba(253, 253, 253, 0.5);
 }
 body.darkBG a,
